# yalc

./: CMakeLists.txt  c.h  foo.c  foo.h  main.c
x86_64/: c.s
